--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="test"></h1>
+    
+    <div id="board"></div>
 
 
     <script src="assets/js/scripts.js"></script>
