add html structure, h1, h1, div and buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     
+    <h1 class="main"></h1>
+    <h2 class="timer">Time Left:</h2>
+    <h2 class="guesses"></h2>
+    <h2 class="best-score"></h2>
+    <h2 class="best-time"></h2>
+    
     <div id="board"></div>
+
+    <button class="easy"></button>
+    <button class="hard"></button>
+    <button class="extreme"></button>
 
 
     <script src="assets/js/scripts.js"></script>
