add font to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Overpass:wght@400;800&family=Roboto:ital,wght@0,100;0,400;1,900&family=Titan+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     
-    <h1 class="main"></h1>
+    <h1 class="main">match two Pokemon</h1>
     <h2 class="timer">Time Left:</h2>
-    <h2 class="guesses"></h2>
-    <h2 class="best-score"></h2>
-    <h2 class="best-time"></h2>
+    <h2 class="guesses">guesses:</h2>
+    <h2 class="best-score">lowest amount of guesses: </h2>
+    <h2 class="best-time">best time:</h2>
     
     <div id="board"></div>
 
     <button class="easy"></button>
     <button class="hard"></button>
     <button class="extreme"></button>
+
 
 
     <script src="assets/js/scripts.js"></script>
